# dbvc

./: .$Diagrams.drawio.bkp  .gitignore  Diagrams.drawio
backend/: go.mod  go.sum  main.go  setup_db.sql  start-prerequisites.sh
backend/api-service/: .gitignore  Dockerfile  go.mod  go.sum  main.go
backend/api-service/auth/: hanlder.go  model.go
backend/api-service/common/: models.go  utils.go
backend/api-service/config/: handler.go  model.go  repository.go
backend/api-service/connectors/: model.go  mssqlHandler.go  mysqlHandler.go  postgresHandler.go  utils.go
backend/api-service/core/: app.go  config.go  context.go  middleware.go
backend/api-service/databaseWorker/: handler.go  model.go  repository.go
backend/api-service/deployment/: deplyoment.yaml  secrets.yaml  service.yaml
backend/api-service/projects/: hanlder.go  model.go  repository.go
backend/api-service/release/: hanlder.go  model.go  repository.go
backend/api-service/user/: hanlder.go  model.go  repository.go
backend/core/: app.go  config.go  context.go
backend/deployment/: postgres-deployment.yaml
backend/worker-service/: CMakeLists.txt  go.mod  install-prerequisites.sh  main.cpp  main.go
backend/worker-service/src/: main.cpp
backend/worker-service/src/connectors/: BaseConnector.cpp  PostgresConnector.cpp  PostgresConnector.h
backend/worker-service/src/logger/: Logger.cpp  Logger.h
backend/worker-service/src/utils/: mapper.cpp  mapper.h  projects.cpp  projects.h
frontend/: package-lock.json  package.json
frontend/src/: app.css  app.tsx  main.tsx
(+69 files in other folders)
